// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move can move 1`] = `
Immutable.List [
  Object {
    "id": "a",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "h",
      },
      Object {
        "content": "blabb",
        "id": "i",
      },
    ],
  },
  Object {
    "id": "b",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "e",
      },
      Object {
        "content": "blaa",
        "id": "f",
      },
      Object {
        "content": "blaaa",
        "id": "g",
      },
    ],
  },
  Object {
    "id": "c",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "h",
      },
    ],
  },
]
`;

exports[`move can reorder 1`] = `
Immutable.List [
  Object {
    "id": "a",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "a",
      },
      Object {
        "content": "blee",
        "id": "f",
      },
      Object {
        "content": "blii",
        "id": "g",
      },
      Object {
        "content": "blu",
        "id": "b",
      },
    ],
  },
]
`;
